[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Tapping-Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Line.png" type="Texture" id=2]
[ext_resource path="res://Assets/Satellite.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Satellite.gd" type="Script" id=4]
[ext_resource path="res://Fonts/fontp.tres" type="DynamicFont" id=5]

[node name="Tapping-Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.06, 0.06 )

[node name="Line" type="Sprite" parent="Node2D"]
position = Vector2( 533.334, 3933.33 )
texture = ExtResource( 2 )

[node name="Line2" type="Sprite" parent="Node2D"]
position = Vector2( 6333.34, 3933.34 )
texture = ExtResource( 2 )

[node name="Satellite" type="Sprite" parent="Node2D"]
position = Vector2( 533.332, 3933.34 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Node2D/Satellite"]

[node name="Label" type="Label" parent="."]
margin_top = 328.0
margin_right = 408.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 5 )
text = "Inhale"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="tween_all_completed" from="Node2D/Satellite/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
